@@ -1,15 +1,14 @@
 package io.modelcontextprotocol.util;
 
-import io.modelcontextprotocol.spec.McpSchema;
-
 import java.util.Collections;
+import java.util.Map;
 
 public final class ToolsUtils {
 
 	private ToolsUtils() {
 	}
 
-	public static final McpSchema.JsonSchema EMPTY_JSON_SCHEMA = new McpSchema.JsonSchema("object",
-			Collections.emptyMap(), null, null, null, null);
+	public static final Map<String, Object> EMPTY_JSON_SCHEMA = Map.of("type", "object", "properties",
+			Collections.emptyMap());
 
 }
